# esp32-rtos-modular-iot-firmware

./: .gitignore  CMakeLists.txt  LICENSE
Project/: CMakeLists.txt  Command.md  build_out.txt  build_out_2.txt  build_out_3.txt  build_out_4.txt  build_out_5.txt  build_out_6.txt  build_out_7.txt  sdkconfig
Project/BLE GUI/: ble_gui.py
Project/BLE GUI/tabs/: connect_tab.py  sensor_tab.py
Project/certs/: secure_boot_signing_key.pem
Project/common/app_types/: sensor_types.c
Project/config/: core_mqtt_config.h  rtos_config.h  wifi_config.h
Project/dashboard/: app.py  config.py  mqtt_subscriber.py  requirements.txt
Project/main/: CMakeLists.txt  Project.c
Project/modules/: mqtt_task.c  wifi_task.c
Project/modules/BLE/: ble_manager.c
components/ble_gatts_svc/: ble_gatts_svc.c
components/ble_manager/: CMakeLists.txt  ble_manager.c
components/ble_manager/include/: ble_manager.h
components/nvs_manager/: nvs_manager.c
components/nvs_manager/include/: nvs_manager.h
esp32_iot_devices/drivers/i2c/: i2c_scan.c  i2c_scan.h
esp32_iot_devices/network/http/: CMakeLists.txt  core_http_client.c  core_http_config.h  core_http_config_defaults.h  http_client.c  http_client.h  transport_interface.h
esp32_iot_devices/network/socket/: CMakeLists.txt  socket_manager.c  socket_manager.h
esp32_iot_devices/network/wifi/: CMakeLists.txt  wifi_manager.c  wifi_manager.h
esp32_iot_devices/security/tls/: CMakeLists.txt  tls_manager.c  (+1 more)
main/: CMakeLists.txt  bh1750.c  bh1750.h  bme280.c  driver_bh1750fvi_interface_template.c  driver_bme280_interface_template.c  main.c
(+29 files in other folders)
